<resources>
    <!-- Main UI-->
    <string name="title">Расписание маршрутов</string>
    <string name="fromCity">Отправка</string>
    <string name="toCity">Прибытие</string>
    <string name="time">Время</string>
    <string name="date">Дата</string>
    <string name="price">Цена</string>

    <!-- Info UI-->
    <string name="genInformation">Общая информация:</string>
    <string name="infoRout">1. Рейс\u0020</string>
    <string name="infoTwo">2.\u0020</string>
    <string name="infoFromCity">Отправление\u0020</string>
    <string name="infoToCity">Прибытие\u0020</string>
    <string name="infoThree">3.\u0020</string>
    <string name="infoCityId">Код города\u0020</string>
    <string name="infoHighlight">, highlight\u0020</string>
    <string name="cityInfo">Инфо -\u0020</string>
    <string name="infoFour">4.\u0020</string>
    <string name="infoFive">5.\u0020</string>
    <string name="infoSix">6.\u0020</string>
    <string name="infoSeven">7.\u0020</string>
    <string name="from">\u0020из\u0020</string>
    <string name="in">\u0020в\u0020</string>
    <string name="infoBusNumber">8. Номер автобуса -\u0020</string>
    <string name="infoPrice">9. Цена -\u0020</string>
    <string name="infoReservation">10. Резерв -\u0020</string>
    <string name="infoStations">Остановки:\u0020</string>
    <string name="infoEleven">11.\u0020</string>

    <!-- Service-->
    <string name="loading">Загрузка</string>
    <string name="emptyList">Список маршрутов пуст</string>
    <string name="repeat">Повторить</string>
</resources>
