<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/infoBgColor"
    android:gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/mainInfoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/genInformation"
                android:textSize="@dimen/textLarge"
                android:textStyle="bold"
                style="@style/textColorStyle"/>

            <LinearLayout
                style="@style/infoLayoutStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/infoRout"
                    android:textSize="@dimen/textNormal"
                    style="@style/textColorStyle"/>

                <TextView
                    android:id="@+id/tvFrRoutId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textNormal"
                    style="@style/textColorStyle"/>

            </LinearLayout>

            <LinearLayout
                style="@style/infoLayoutStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/infoTwo"
                    android:textSize="@dimen/textNormal"
                    style="@style/textColorStyle"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvFrFromCity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/infoFromCity"
                        android:textSize="@dimen/textNormal"
                        style="@style/textColorStyle"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                style="@style/infoLayoutStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/infoThree"
                    android:textSize="@dimen/textNormal"
                    style="@style/textColorStyle"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvFrFromCityId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/infoHighlight"
                        android:textSize="@dimen/textNormal"
                        style="@style/textColorStyle"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                style="@style/infoLayoutStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/infoFour"
                    android:textSize="@dimen/textNormal"
                    style="@style/textColorStyle"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvFrFromCityInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cityInfo"
                        android:textSize="@dimen/textNormal"
                        style="@style/textColorStyle"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                style="@style/infoLayoutStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/infoFive"
                    android:textSize="@dimen/textNormal"
                    style="@style/textColorStyle"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvFrToCity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/infoToCity"
                        android:textSize="@dimen/textNormal"
                        style="@style/textColorStyle"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                style="@style/infoLayoutStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/infoSix"
                    android:textSize="@dimen/textNormal"
                    style="@style/textColorStyle"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvFrToCityId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/infoHighlight"
                        android:textSize="@dimen/textNormal"
                        style="@style/textColorStyle"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                style="@style/infoLayoutStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/infoSeven"
                    android:textSize="@dimen/textNormal"
                    style="@style/textColorStyle"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvFrToCityInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cityInfo"
                        android:textSize="@dimen/textNormal"
                        style="@style/textColorStyle"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                style="@style/infoLayoutStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/infoBusNumber"
                    android:textSize="@dimen/textNormal"
                    style="@style/textColorStyle"/>

                <TextView
                    android:id="@+id/tvFrBusNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textSize="@dimen/textNormal"
                    style="@style/textColorStyle"/>
            </LinearLayout>

            <LinearLayout
                style="@style/infoLayoutStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/infoPrice"
                    android:textSize="@dimen/textNormal"
                    style="@style/textColorStyle"/>

                <TextView
                    android:id="@+id/tvFrPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textNormal"
                    style="@style/textColorStyle"/>
            </LinearLayout>

            <LinearLayout
                style="@style/infoLayoutStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/infoReservation"
                    android:textSize="@dimen/textNormal"
                    style="@style/textColorStyle"/>

                <TextView
                    android:id="@+id/tvFrReservation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textNormal"
                    style="@style/textColorStyle"/>
            </LinearLayout>

            <LinearLayout
                style="@style/infoLayoutStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/infoEleven"
                    android:textSize="@dimen/textNormal"
                    style="@style/textColorStyle"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvFrStations"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/infoStations"
                        android:textSize="@dimen/textNormal"
                        style="@style/textColorStyle"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
